crates/ruff_linter/src/rules/flake8_bandit/snapshots/ruff_linter__rules__flake8_bandit__tests__S105_S105.py.snap
---
source: crates/ruff_linter/src/rules/flake8_bandit/mod.rs
---
S105.py:13:12: S105 (hardcoded-password-string) Possible hardcoded password assigned to: "password"
   |
12 | # Errors
13 | password = "s3cr3t"
   |            ^^^^^^^^ S105 (hardcoded-password-string)
14 | _pass = "s3cr3t"
15 | passwd = "s3cr3t"
   |

S105.py:14:9: S105 (hardcoded-password-string) Possible hardcoded password assigned to: "_pass"
   |
12 | # Errors
13 | password = "s3cr3t"
14 | _pass = "s3cr3t"
   |         ^^^^^^^^ S105 (hardcoded-password-string)
15 | passwd = "s3cr3t"
16 | pwd = "s3cr3t"
   |

S105.py:15:10: S105 (hardcoded-password-string) Possible hardcoded password assigned to: "passwd"
   |
13 | password = "s3cr3t"
14 | _pass = "s3cr3t"
15 | passwd = "s3cr3t"
   |          ^^^^^^^^ S105 (hardcoded-password-string)
16 | pwd = "s3cr3t"
17 | secret = "s3cr3t"
   |

S105.py:16:7: S105 (hardcoded-password-string) Possible hardcoded password assigned to: "pwd"
   |
14 | _pass = "s3cr3t"
15 | passwd = "s3cr3t"
16 | pwd = "s3cr3t"
   |       ^^^^^^^^ S105 (hardcoded-password-string)
17 | secret = "s3cr3t"
18 | token = "s3cr3t"
   |

S105.py:17:10: S105 (hardcoded-password-string) Possible hardcoded password assigned to: "secret"
   |
15 | passwd = "s3cr3t"
16 | pwd = "s3cr3t"
17 | secret = "s3cr3t"
   |          ^^^^^^^^ S105 (hardcoded-password-string)
18 | token = "s3cr3t"
19 | secrete = "s3cr3t"
   |

S105.py:18:9: S105 (hardcoded-password-string) Possible hardcoded password assigned to: "token"
   |
16 | pwd = "s3cr3t"
17 | secret = "s3cr3t"
18 | token = "s3cr3t"
   |         ^^^^^^^^ S105 (hardcoded-password-string)
19 | secrete = "s3cr3t"
20 | safe = password = "s3cr3t"
   |

S105.py:19:11: S105 (hardcoded-password-string) Possible hardcoded password assigned to: "secrete"
   |
17 | secret = "s3cr3t"
18 | token = "s3cr3t"
19 | secrete = "s3cr3t"
   |           ^^^^^^^^ S105 (hardcoded-password-string)
20 | safe = password = "s3cr3t"
21 | password = safe = "s3cr3t"
   |

S105.py:20:19: S105 (hardcoded-password-string) Possible hardcoded password assigned to: "password"
   |
18 | token = "s3cr3t"
19 | secrete = "s3cr3t"
20 | safe = password = "s3cr3t"
   |                   ^^^^^^^^ S105 (hardcoded-password-string)
21 | password = safe = "s3cr3t"
22 | PASSWORD = "s3cr3t"
   |

S105.py:21:19: S105 (hardcoded-password-string) Possible hardcoded password assigned to: "password"
   |
19 | secrete = "s3cr3t"
20 | safe = password = "s3cr3t"
21 | password = safe = "s3cr3t"
   |                   ^^^^^^^^ S105 (hardcoded-password-string)
22 | PASSWORD = "s3cr3t"
23 | PassWord = "s3cr3t"
   |

S105.py:22:12: S105 (hardcoded-password-string) Possible hardcoded password assigned to: "PASSWORD"
   |
20 | safe = password = "s3cr3t"
21 | password = safe = "s3cr3t"
22 | PASSWORD = "s3cr3t"
   |            ^^^^^^^^ S105 (hardcoded-password-string)
23 | PassWord = "s3cr3t"
24 | password: str = "s3cr3t"
   |

S105.py:23:12: S105 (hardcoded-password-string) Possible hardcoded password assigned to: "PassWord"
   |
21 | password = safe = "s3cr3t"
22 | PASSWORD = "s3cr3t"
23 | PassWord = "s3cr3t"
   |            ^^^^^^^^ S105 (hardcoded-password-string)
24 | password: str = "s3cr3t"
25 | password: Final = "s3cr3t"
   |

S105.py:24:17: S105 (hardcoded-password-string) Possible hardcoded password assigned to: "password"
   |
22 | PASSWORD = "s3cr3t"
23 | PassWord = "s3cr3t"
24 | password: str = "s3cr3t"
   |                 ^^^^^^^^ S105 (hardcoded-password-string)
25 | password: Final = "s3cr3t"
   |

S105.py:25:19: S105 (hardcoded-password-string) Possible hardcoded password assigned to: "password"
   |
23 | PassWord = "s3cr3t"
24 | password: str = "s3cr3t"
25 | password: Final = "s3cr3t"
   |                   ^^^^^^^^ S105 (hardcoded-password-string)
26 |
27 | d["password"] = "s3cr3t"
   |

S105.py:27:17: S105 (hardcoded-password-string) Possible hardcoded password assigned to: "password"
   |
25 | password: Final = "s3cr3t"
26 |
27 | d["password"] = "s3cr3t"
   |                 ^^^^^^^^ S105 (hardcoded-password-string)
28 | d["pass"] = "s3cr3t"
29 | d["passwd"] = "s3cr3t"
   |

S105.py:28:13: S105 (hardcoded-password-string) Possible hardcoded password assigned to: "pass"
   |
27 | d["password"] = "s3cr3t"
28 | d["pass"] = "s3cr3t"
   |             ^^^^^^^^ S105 (hardcoded-password-string)
29 | d["passwd"] = "s3cr3t"
30 | d["pwd"] = "s3cr3t"
   |

S105.py:29:15: S105 (hardcoded-password-string) Possible hardcoded password assigned to: "passwd"
   |
27 | d["password"] = "s3cr3t"
28 | d["pass"] = "s3cr3t"
29 | d["passwd"] = "s3cr3t"
   |               ^^^^^^^^ S105 (hardcoded-password-string)
30 | d["pwd"] = "s3cr3t"
31 | d["secret"] = "s3cr3t"
   |

S105.py:30:12: S105 (hardcoded-password-string) Possible hardcoded password assigned to: "pwd"
   |
28 | d["pass"] = "s3cr3t"
29 | d["passwd"] = "s3cr3t"
30 | d["pwd"] = "s3cr3t"
   |            ^^^^^^^^ S105 (hardcoded-password-string)
31 | d["secret"] = "s3cr3t"
32 | d["token"] = "s3cr3t"
   |

S105.py:31:15: S105 (hardcoded-password-string) Possible hardcoded password assigned to: "secret"
   |
29 | d["passwd"] = "s3cr3t"
30 | d["pwd"] = "s3cr3t"
31 | d["secret"] = "s3cr3t"
   |               ^^^^^^^^ S105 (hardcoded-password-string)
32 | d["token"] = "s3cr3t"
33 | d["secrete"] = "s3cr3t"
   |

S105.py:32:14: S105 (hardcoded-password-string) Possible hardcoded password assigned to: "token"
   |
30 | d["pwd"] = "s3cr3t"
31 | d["secret"] = "s3cr3t"
32 | d["token"] = "s3cr3t"
   |              ^^^^^^^^ S105 (hardcoded-password-string)
33 | d["secrete"] = "s3cr3t"
34 | safe = d["password"] = "s3cr3t"
   |

S105.py:33:16: S105 (hardcoded-password-string) Possible hardcoded password assigned to: "secrete"
   |
31 | d["secret"] = "s3cr3t"
32 | d["token"] = "s3cr3t"
33 | d["secrete"] = "s3cr3t"
   |                ^^^^^^^^ S105 (hardcoded-password-string)
34 | safe = d["password"] = "s3cr3t"
35 | d["password"] = safe = "s3cr3t"
   |

S105.py:34:24: S105 (hardcoded-password-string) Possible hardcoded password assigned to: "password"
   |
32 | d["token"] = "s3cr3t"
33 | d["secrete"] = "s3cr3t"
34 | safe = d["password"] = "s3cr3t"
   |                        ^^^^^^^^ S105 (hardcoded-password-string)
35 | d["password"] = safe = "s3cr3t"
   |

S105.py:35:24: S105 (hardcoded-password-string) Possible hardcoded password assigned to: "password"
   |
33 | d["secrete"] = "s3cr3t"
34 | safe = d["password"] = "s3cr3t"
35 | d["password"] = safe = "s3cr3t"
   |                        ^^^^^^^^ S105 (hardcoded-password-string)
   |

S105.py:39:16: S105 (hardcoded-password-string) Possible hardcoded password assigned to: "password"
   |
38 | class MyClass:
39 |     password = "s3cr3t"
   |                ^^^^^^^^ S105 (hardcoded-password-string)
40 |     safe = password
   |

S105.py:43:20: S105 (hardcoded-password-string) Possible hardcoded password assigned to: "password"
   |
43 | MyClass.password = "s3cr3t"
   |                    ^^^^^^^^ S105 (hardcoded-password-string)
44 | MyClass._pass = "s3cr3t"
45 | MyClass.passwd = "s3cr3t"
   |

S105.py:44:17: S105 (hardcoded-password-string) Possible hardcoded password assigned to: "_pass"
   |
43 | MyClass.password = "s3cr3t"
44 | MyClass._pass = "s3cr3t"
   |                 ^^^^^^^^ S105 (hardcoded-password-string)
45 | MyClass.passwd = "s3cr3t"
46 | MyClass.pwd = "s3cr3t"
   |

S105.py:45:18: S105 (hardcoded-password-string) Possible hardcoded password assigned to: "passwd"
   |
43 | MyClass.password = "s3cr3t"
44 | MyClass._pass = "s3cr3t"
45 | MyClass.passwd = "s3cr3t"
   |                  ^^^^^^^^ S105 (hardcoded-password-string)
46 | MyClass.pwd = "s3cr3t"
47 | MyClass.secret = "s3cr3t"
   |

S105.py:46:15: S105 (hardcoded-password-string) Possible hardcoded password assigned to: "pwd"
   |
44 | MyClass._pass = "s3cr3t"
45 | MyClass.passwd = "s3cr3t"
46 | MyClass.pwd = "s3cr3t"
   |               ^^^^^^^^ S105 (hardcoded-password-string)
47 | MyClass.secret = "s3cr3t"
48 | MyClass.token = "s3cr3t"
   |

S105.py:47:18: S105 (hardcoded-password-string) Possible hardcoded password assigned to: "secret"
   |
45 | MyClass.passwd = "s3cr3t"
46 | MyClass.pwd = "s3cr3t"
47 | MyClass.secret = "s3cr3t"
   |                  ^^^^^^^^ S105 (hardcoded-password-string)
48 | MyClass.token = "s3cr3t"
49 | MyClass.secrete = "s3cr3t"
   |

S105.py:48:17: S105 (hardcoded-password-string) Possible hardcoded password assigned to: "token"
   |
46 | MyClass.pwd = "s3cr3t"
47 | MyClass.secret = "s3cr3t"
48 | MyClass.token = "s3cr3t"
   |                 ^^^^^^^^ S105 (hardcoded-password-string)
49 | MyClass.secrete = "s3cr3t"
   |

S105.py:49:19: S105 (hardcoded-password-string) Possible hardcoded password assigned to: "secrete"
   |
47 | MyClass.secret = "s3cr3t"
48 | MyClass.token = "s3cr3t"
49 | MyClass.secrete = "s3cr3t"
   |                   ^^^^^^^^ S105 (hardcoded-password-string)
50 |
51 | password == "s3cr3t"
   |

S105.py:51:13: S105 (hardcoded-password-string) Possible hardcoded password assigned to: "password"
   |
49 | MyClass.secrete = "s3cr3t"
50 |
51 | password == "s3cr3t"
   |             ^^^^^^^^ S105 (hardcoded-password-string)
52 | _pass == "s3cr3t"
53 | passwd == "s3cr3t"
   |

S105.py:52:10: S105 (hardcoded-password-string) Possible hardcoded password assigned to: "_pass"
   |
51 | password == "s3cr3t"
52 | _pass == "s3cr3t"
   |          ^^^^^^^^ S105 (hardcoded-password-string)
53 | passwd == "s3cr3t"
54 | pwd == "s3cr3t"
   |

S105.py:53:11: S105 (hardcoded-password-string) Possible hardcoded password assigned to: "passwd"
   |
51 | password == "s3cr3t"
52 | _pass == "s3cr3t"
53 | passwd == "s3cr3t"
   |           ^^^^^^^^ S105 (hardcoded-password-string)
54 | pwd == "s3cr3t"
55 | secret == "s3cr3t"
   |

S105.py:54:8: S105 (hardcoded-password-string) Possible hardcoded password assigned to: "pwd"
   |
52 | _pass == "s3cr3t"
53 | passwd == "s3cr3t"
54 | pwd == "s3cr3t"
   |        ^^^^^^^^ S105 (hardcoded-password-string)
55 | secret == "s3cr3t"
56 | token == "s3cr3t"
   |

S105.py:55:11: S105 (hardcoded-password-string) Possible hardcoded password assigned to: "secret"
   |
53 | passwd == "s3cr3t"
54 | pwd == "s3cr3t"
55 | secret == "s3cr3t"
   |           ^^^^^^^^ S105 (hardcoded-password-string)
56 | token == "s3cr3t"
57 | secrete == "s3cr3t"
   |

S105.py:56:10: S105 (hardcoded-password-string) Possible hardcoded password assigned to: "token"
   |
54 | pwd == "s3cr3t"
55 | secret == "s3cr3t"
56 | token == "s3cr3t"
   |          ^^^^^^^^ S105 (hardcoded-password-string)
57 | secrete == "s3cr3t"
58 | password == safe == "s3cr3t"
   |

S105.py:57:12: S105 (hardcoded-password-string) Possible hardcoded password assigned to: "secrete"
   |
55 | secret == "s3cr3t"
56 | token == "s3cr3t"
57 | secrete == "s3cr3t"
   |            ^^^^^^^^ S105 (hardcoded-password-string)
58 | password == safe == "s3cr3t"
   |

S105.py:58:21: S105 (hardcoded-password-string) Possible hardcoded password assigned to: "password"
   |
56 | token == "s3cr3t"
57 | secrete == "s3cr3t"
58 | password == safe == "s3cr3t"
   |                     ^^^^^^^^ S105 (hardcoded-password-string)
59 |
60 | if token == "1\n2":
   |

S105.py:60:13: S105 (hardcoded-password-string) Possible hardcoded password assigned to: "token"
   |
58 | password == safe == "s3cr3t"
59 |
60 | if token == "1\n2":
   |             ^^^^^^ S105 (hardcoded-password-string)
61 |     pass
   |

S105.py:63:13: S105 (hardcoded-password-string) Possible hardcoded password assigned to: "token"
   |
61 |     pass
62 |
63 | if token == "3\t4":
   |             ^^^^^^ S105 (hardcoded-password-string)
64 |     pass
   |

S105.py:66:13: S105 (hardcoded-password-string) Possible hardcoded password assigned to: "token"
   |
64 |     pass
65 |
66 | if token == "5\r6":
   |             ^^^^^^ S105 (hardcoded-password-string)
67 |     pass
   |
