crates/ruff_linter/src/rules/flake8_bandit/snapshots/ruff_linter__rules__flake8_bandit__tests__S110_S110.py.snap
---
source: crates/ruff_linter/src/rules/flake8_bandit/mod.rs
---
S110.py:3:1: S110 (try-except-pass) `try`-`except`-`pass` detected, consider logging the exception
  |
1 |   try:
2 |       pass
3 | / except Exception:
4 | |     pass
  | |________^ S110 (try-except-pass)
5 |
6 |   try:
  |

S110.py:8:1: S110 (try-except-pass) `try`-`except`-`pass` detected, consider logging the exception
   |
 6 |   try:
 7 |       pass
 8 | / except:
 9 | |     pass
   | |________^ S110 (try-except-pass)
10 |
11 |   try:
   |
