crates/ruff_linter/src/rules/flake8_bandit/snapshots/ruff_linter__rules__flake8_bandit__tests__S112_S112.py.snap
---
source: crates/ruff_linter/src/rules/flake8_bandit/mod.rs
---
S112.py:3:1: S112 (try-except-continue) `try`-`except`-`continue` detected, consider logging the exception
  |
1 |   try:
2 |       pass
3 | / except Exception:
4 | |     continue
  | |____________^ S112 (try-except-continue)
5 |
6 |   try:
  |

S112.py:8:1: S112 (try-except-continue) `try`-`except`-`continue` detected, consider logging the exception
   |
 6 |   try:
 7 |       pass
 8 | / except:
 9 | |     continue
   | |____________^ S112 (try-except-continue)
10 |
11 |   try:
   |

S112.py:13:1: S112 (try-except-continue) `try`-`except`-`continue` detected, consider logging the exception
   |
11 |   try:
12 |       pass
13 | / except (Exception,):
14 | |     continue
   | |____________^ S112 (try-except-continue)
15 |
16 |   try:
   |

S112.py:18:1: S112 (try-except-continue) `try`-`except`-`continue` detected, consider logging the exception
   |
16 |   try:
17 |       pass
18 | / except (Exception, ValueError):
19 | |     continue
   | |____________^ S112 (try-except-continue)
20 |
21 |   try:
   |
