crates/ruff_linter/src/rules/flake8_bandit/snapshots/ruff_linter__rules__flake8_bandit__tests__S201_S201.py.snap
---
source: crates/ruff_linter/src/rules/flake8_bandit/mod.rs
---
S201.py:10:9: S201 (flask-debug-true) Use of `debug=True` in Flask app detected
   |
 9 | # OK
10 | app.run(debug=True)
   |         ^^^^^^^^^^ S201 (flask-debug-true)
11 |
12 | # Errors
   |
