crates/ruff_linter/src/rules/flake8_bandit/snapshots/ruff_linter__rules__flake8_bandit__tests__S301_S301.py.snap
---
source: crates/ruff_linter/src/rules/flake8_bandit/mod.rs
---
S301.py:3:1: S301 (suspicious-pickle-usage) `pickle` and modules that wrap it can be unsafe when used to deserialize untrusted data, possible security issue
  |
1 | import pickle
2 |
3 | pickle.loads()
  | ^^^^^^^^^^^^^^ S301 (suspicious-pickle-usage)
  |
